--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     flex-direction: column;
     padding: 4px 8px;
     color: #fbd000;
-    font-weight: 14px;
+    font-size: 14px;
     font-weight: 600;
     margin-top: 10px;
 }
@@ -85,4 +85,163 @@ body {
 
 .library .library_content .fa-plus {
     margin: 24px 10px;
+}
+
+.section-playlist {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #fbd000;
+    justify-content: space-between;
+    gap: 20px;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0px;
+    padding: 16px 20px;
+    border-radius: 10px;
+    color: #000000;
+}
+
+.section-playlist .section-playlist_content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.section-playlist_content .text {
+    padding-bottom: 14px;
+    color: #121212;
+    font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist_content .title {
+    font-weight: 700;
+}
+
+.section-playlist_content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist_content .section-playlist_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    color: #121212;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    border: 0px;
+    width: 113px;
+    margin-top: 12px;
+    gap: 10px;
+}
+
+.button-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+}
+
+.section-playlist_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fa-music {
+    font-size: 16px;
+    color: #000;
+}
+
+.languages .languages_button{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    width: 170px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 20px;
+    gap: 5px
+}
+
+.library .cookies{
+    margin: 10px 10px;
+}
+
+.library .cookies a{
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+    font-family: "DM Sans", sans-serif;
+}
+
+.library .cookies a:hover{
+    text-decoration: underline;
+}
+
+.disclaimer-premium {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #fbd000, #d32020);
+    padding: 15px 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.disclaimer-premium .text {
+    flex-shrink: 0;
+    font-family: "DM Sans", sans-serif;
+}
+
+.disclaimer-premium .disclaimer-premium_title {
+    color: #121212;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.disclaimer-premium .disclaimer-premium_subtitle {
+    color: #121212;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.disclaimer-premium .disclaimer-premium_bottom {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: none;
+    border-radius: 40px;
+    display: inline-block;
+    text-align: center;
+}
+
+.disclaimer-premium .disclaimer-premium_bottom a{
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    color: #000000;
+}
+
+.disclaimer-premium .disclaimer-premium_bottom a:hover{
+    background-color: #fbd000;
 }
