--- a/src/assets/styles/sidebar-footer.css
+++ b/src/assets/styles/sidebar-footer.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    font-family: var(--font-dm-sans);
 }
 .sidebar {
     position: fixed;
@@ -39,7 +40,6 @@ body {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library {
@@ -68,7 +68,6 @@ body {
     border: 0px;
     font-size: 16px;
     font-weight: 600;
-    font-family: "DM Sans", sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -100,6 +99,7 @@ body {
     padding: 16px 20px;
     border-radius: 10px;
     color: #000000;
+    border: 5px solid #ffffff;
 }
 
 .section-playlist .section-playlist_content {
@@ -111,7 +111,6 @@ body {
 .section-playlist_content .text {
     padding-bottom: 14px;
     color: #121212;
-    font-family: "DM Sans", sans-serif;
 }
 
 .section-playlist_content .title {
@@ -133,7 +132,6 @@ body {
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -186,7 +184,6 @@ body {
     font-weight: 500;
     font-size: 10px;
     text-decoration: none;
-    font-family: "DM Sans", sans-serif;
 }
 
 .library .cookies a:hover{
@@ -206,7 +203,6 @@ body {
 
 .disclaimer-premium .text {
     flex-shrink: 0;
-    font-family: "DM Sans", sans-serif;
 }
 
 .disclaimer-premium .disclaimer-premium_title {
@@ -233,10 +229,10 @@ body {
     border-radius: 40px;
     display: inline-block;
     text-align: center;
+    border: 5px solid #121212;
 }
 
 .disclaimer-premium .disclaimer-premium_bottom a{
-    font-family: "DM Sans", sans-serif;
     text-decoration: none;
     text-transform: none;
     color: #000000;
